fix: hide extra icons on smaller screens and adjust form styling

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -62,7 +62,8 @@ body,
 .tab-main,
 .tab-main .col,
 .tab-main .col .row:nth-child(2),
-form {
+form,
+.code pre {
     // .flex-column {
     flex-direction: column !important;
     // .flex-fill {
